fix menu overlap

--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
             50% { transform: translateX(-50%) translateY(-10px); }
         }
 
+         @media (max-width: 399px) {
+            .hero {
+                margin-top: 2rem;
+            }
+        }
+
         /* Floating cats animation */
         .floating-cats {
             position: absolute;
