move hero 1 rem down

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         }
 
          @media (max-width: 399px) {
-            .hero {
+            .hero-content {
                 margin-top: 3rem;
             }
         }
@@ -1004,7 +1004,6 @@
     </div>
 </section>
 
-<!-- Products Section -->
 <!-- Products Section -->
 <section class="products" id="products">
     <div class="container">
