fix mobile acasa press bug

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
         }
 
          @media (max-width: 399px) {
-            .hero-content {
-                margin-top: 3rem;
+            .hero {
+                margin-top: 5rem;
             }
         }
 
