fix mobile acasa press bug

--- a/index.html
+++ b/index.html
@@ -165,12 +165,6 @@
             50% { transform: translateX(-50%) translateY(-10px); }
         }
 
-         @media (max-width: 399px) {
-            .hero {
-                margin-top: 5rem;
-            }
-        }
-
         /* Floating cats animation */
         .floating-cats {
             position: absolute;
@@ -884,6 +878,18 @@
 
             .container {
                 padding: 1rem;
+            }
+        }
+
+         @media (max-width: 480px) {
+            .hero {
+                padding-top: 90px;
+            }
+        }
+
+        @media (max-width: 399px) {
+            .hero {
+                padding-top: 100px;
             }
         }
 
